# nasm-segelf

./: Makefile.in  autogen.sh  configure  configure.ac  meson.build  nasm.man  nasm.spec.rpkg  ndisasm.man
asm/: nasm.c  parser.c
autoconf/: aclocal.m4
config/: config.h.in  unconfig.h
debian/: changelog  control  copyright  rules  watch
debian/patches/: 0003-debian-debian-patches-04-reproducible-build.patch.patch  0006-debian-Set-INSTALLROOT-to-DESTDIR-in-Makefile.in.patch  0007-doc-sort-keys-for-reproducibility.patch  series
debian/source/: lintian-overrides
doc/: genps.pl
include/: compiler.h
nasmlib/: path.c
output/: elf.h  outelf.c
test/: sections.asm
tools/: mkdep.pl
